maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: ';' expected but 'true' found.
    if(estFaceMur()){gauche(); retrurn true}
                                       ^Escaper:6: error: ';' expected but 'true' found.
    if(estFaceMur()){droite(); retrurn true}
                                       ^